<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumblebee_ros</name>
  <version>1.0.0</version>
  <description>Publishes stereo images and disparity images from FLIR Bumblebee X stereo camera.</description>
  <maintainer email="shubam.sachdeva@teledyne.com">shubam</maintainer>

  <!-- FLIR Spinnaker SDK License. Refer to the FLIR_license.txt file in the package directory -->
  <license>FLIR Spinnaker SDK License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
